...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      body: listScreens[tabIndex],
      bottomNavigationBar: BottomNavigationBar(
          key: const Key('BottomNavigationBar'),
          type: BottomNavigationBarType.fixed,
          selectedItemColor: Theme.of(context).colorScheme.selectedTab,
          unselectedItemColor: Theme.of(context).colorScheme.unSelectedTab,
          selectedFontSize: AppSize.s12,
          unselectedFontSize: AppSize.s12,
          backgroundColor: Theme.of(context).colorScheme.tabbarBackground,
...
            BottomNavigationBarItem(
              tooltip: 'Bookmarks',
              icon: Icon(ConstantImage.bookmark),
              label: 'Bookmarks',
            ),
            BottomNavigationBarItem(
              tooltip: 'Profile',
              icon: Icon(ConstantImage.personCircle),
              label: 'Profile',
            ),
          ]),
    );
  }
...
